# tensorzero

./: Cargo.toml  pnpm-lock.yaml
.github/workflows/: auto-approve-trusted-pr-workflows.yml  batch-completion-cron.yml  build-gateway-container.yml  build-gateway-e2e-container.yml  build-mock-provider-api-container.yml  build-ui-container.yml  buildkite-merge-queue.yml  buildkite-test-suite.yml  caching-hack.yml  cancel-merge-queue-on-job-failure.yml  cancel-on-status-failure.yml  cancel-stale-merge-queue.yml  cla.yml  dispatch-autopilot-e2e.yml  docker-hub-publish.yml  dummy.yml  general.yml  helm-publish.yml  live-batch-test.yml  merge-queue.yml  mocked-batch-test.yml  optimization-test-cron.yml  pypi-publish.yml  python-client-build.yml  slack-notifications.yml  slash-command-check-fork.yml  slash-command-dispatch.yml  slash-command-merge-queue.yml  slash-command-regen-fixtures.yml  ui-tests-e2e-model-inference-cache.yml  ui-tests-e2e.yml  ui-tests.yml  upgrade-tensorzero-deps.yml
ci/: README.md
docs/: postgres-migration.md  search-with-postgres-options.md
examples/kie-reasoning/: QUICKSTART.md  README.md  SETUP_SUMMARY.md  example.py  example.ts  package.json  requirements.txt  tests.py
examples/kie-reasoning/config/: code_system_prompt.txt  tensorzero.toml
gateway/: Cargo.toml
gateway/src/: main.rs
internal/autopilot-tools/src/: lib.rs
internal/tensorzero-signals/: Cargo.toml
scripts/postgres_load_test/: README.md  coordinator.py  load_test.py  pyproject.toml  schema.sql  schema_unlogged.sql
tensorzero-core/src/: model.rs  model_table.rs
(+21 files in other folders)
