[project]
name = "postgres-load-test"
version = "0.1.0"
description = "Postgres load test for TensorZero inference writes"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.1.0",
    "click>=8.0.0",
    "uuid6>=2024.1.12",
    "orjson>=3.9.0",
]

[project.scripts]
load-test = "load_test:main"
